# NVMRDisplay

./: .gitmodules  CMakeLists.txt  Jenkinsfile  NVMRDisplay.pro  README.md  avahibrowse.cpp  avahibrowse.h  displaybin.cpp  displaybin.h  embeddedavahibrowse.cpp  embeddedavahibrowse.h  h264bin.cpp  h264bin.h  main.cpp  no-jmri.html  nvmrdisplay.cpp  nvmrdisplay.h  nvmrdisplay.ui  qml.qrc  rpisourcebin.cpp  rpisourcebin.h  rpivideodisplay.cpp  rpivideodisplay.h  rpivideosender.cpp  rpivideosender.h  senderconfigurator.cpp  senderconfigurator.h  senderconfigurator.ui  servicediscover.cpp  servicediscover.h  settingshelper.cpp  settingshelper.h  soospysourcebin.cpp  soospysourcebin.h  videodiscover.cpp  videodiscover.h  videopipeline.cpp  videopipeline.h  videosource.cpp  videosource.h  (+1 more)
android/: AndroidManifest.xml
avahi-common/: dbus-watch-glue.c  dbus-watch-glue.h  dbus.c  dbus.h  error.c  i18n.c  i18n.h
avahi-core/: iface-pfroute.c
avahi-qt/: qt-watch.cpp
debian/: README  README.Debian  README.source  changelog  control  copyright
design/: .design.md.swp  design.md  notes.md
gstreamer-support/: displaybin.h  rpisourcebin.cpp  rpisourcebin.h  rpivideodisplay.cpp  soospysourcebin.cpp  soospysourcebin.h  videopipeline.h
prototype/: .rpi-video.sh.swp  rpi-video.sh  rtsp-video.sh  soospy-video.sh
qml/: NVMRVideo.qml  SettingsPage.qml  VideoForm.qml  WebForm.qml  WebForm.ui.qml  main.qml
quickwidget/: video.qml
widgets-support/: nvmrdisplay.h  qmlwidgets.qrc  senderconfigurator.cpp  senderconfigurator.h  senderconfigurator.ui
